--- a/BookExchange/Views/Home/Index.cshtml
+++ b/BookExchange/Views/Home/Index.cshtml
@@ -4,5 +4,12 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <!--<p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>-->
+
+    <ul>
+        @for (int i = 0; i < 6; i++)
+        {
+            <li>@ViewData["Message"]</li>
+        }
+    </ul>
 </div>
