--- a/BookExchange/Views/Loans/Create.cshtml
+++ b/BookExchange/Views/Loans/Create.cshtml
@@ -13,6 +13,16 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
+                <label asp-for="LoanerName" class="control-label"></label>
+                <input asp-for="LoanerName" class="form-control" />
+                <span asp-validation-for="LoanerName" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="LoanerEmail" class="control-label"></label>
+                <input asp-for="LoanerEmail" class="form-control" />
+                <span asp-validation-for="LoanerEmail" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="ISBN" class="control-label"></label>
                 <input asp-for="ISBN" class="form-control" />
                 <span asp-validation-for="ISBN" class="text-danger"></span>
