--- a/BookExchange/Views/Loans/Index.cshtml
+++ b/BookExchange/Views/Loans/Index.cshtml
@@ -13,7 +13,16 @@
     <thead>
         <tr>
             <th>
+                @Html.DisplayNameFor(model => model.LoanerName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.LoanerEmail)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.ISBN)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.LoanDate)
             </th>
             <th></th>
         </tr>
@@ -22,11 +31,20 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.ISBN)
+                    @Html.DisplayFor(modelItem => item.LoanerName)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                    @Html.DisplayFor(modelItem => item.LoanerEmail)
+            </td>
+            <td>
+                    @Html.DisplayFor(modelItem => item.ISBN)
+            </td>
+            <td>
+                    @Html.DisplayFor(modelItem => item.LoanDate)
+            </td>
+            
+            <td>
+                <a asp-action="Rent" asp-route-id="@item.Id">Rent</a> |
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
