--- a/BookExchange/Views/Books/Index.cshtml
+++ b/BookExchange/Views/Books/Index.cshtml
@@ -58,7 +58,7 @@
                 <td>
                     @Html.DisplayFor(modelItem => item.Author)
                 </td>
-                <td>
+                <td id="desc">
                     @Html.DisplayFor(modelItem => item.Description)
                 </td>
                 <td>
@@ -71,9 +71,9 @@
                     @Html.DisplayFor(modelItem => item.Available)
                 </td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                    <a asp-action="Edit" asp-route-id="@item.BookID">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.BookID">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.BookID">Delete</a>
                 </td>
             </tr>
         }
