--- a/BookExchange/Views/Shared/_Layout.cshtml
+++ b/BookExchange/Views/Shared/_Layout.cshtml
@@ -26,10 +26,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Books" asp-action="Index">Books</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="ExchangeUsers" asp-action="Index">Users</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Loans" asp-action="Index">Loans</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Rents" asp-action="Index">Rents</a>
                         </li>
                     </ul>
                 </div>
