--- a/BookExchange/wwwroot/css/site.css
+++ b/BookExchange/wwwroot/css/site.css
@@ -1,25 +1,17 @@
-#desc {
-    display: block;
-    height: 250px;
-    overflow: auto;
+@media screen and (max-width: 500px) {
+    .header a {
+        float: none;
+        display: block;
+        text-align: left;
+    }
 
-}
-
-html {
-  font-size: 14px;
+    .header-right {
+        float: none;
+    }
 }
 
 @media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
-}
-
-html {
-  position: relative;
-  min-height: 100%;
-}
-
-body {
-  margin-bottom: 60px;
+    html {
+        font-size: 16px;
+    }
 }
