Fixed CSS Errors

--- a/BookExchange/Views/Books/Index.cshtml
+++ b/BookExchange/Views/Books/Index.cshtml
@@ -6,6 +6,8 @@
 
 <head>
     <title>BookSearch</title>
+
+    <link rel="stylesheet" href="~/css/BookIndex.css" asp-append-version="true" />
 </head>
 
 <body>
