--- a/BookExchange/Views/Home/Index.cshtml
+++ b/BookExchange/Views/Home/Index.cshtml
@@ -4,6 +4,7 @@
 
 <!--Poppins Font-->
 <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:wght@500&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="~/css/HomeIndex.css" asp-append-version="true" />
 
 <div class="mainBody">
 
