--- a/BookExchange/Views/Loans/Create.cshtml
+++ b/BookExchange/Views/Loans/Create.cshtml
@@ -5,9 +5,11 @@
 }
 
 <html>
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <head>
     <title>BookExchange</title>
+
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="~/css/LoanCreate.css" asp-append-version="true" />
 </head>
 
 <body>
