Changed Footer content

--- a/BookExchange/Views/Shared/_Layout.cshtml
+++ b/BookExchange/Views/Shared/_Layout.cshtml
@@ -33,13 +33,13 @@
                 <div class="collapse d-sm-inline-flex justify-content-between header-right">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link fa-solid fa-house fa-xl" asp-area="" asp-controller="Books" asp-action="Index"></a>
+                            <a class="nav-link fa-solid fa-house fa-xl" asp-area="" asp-controller="Home" asp-action="Index"></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link fa-solid fa-book fa-xl" asp-area="" asp-controller="Loans" asp-action="Index"></a>
+                            <a class="nav-link fa-solid fa-book fa-xl" asp-area="" asp-controller="Books" asp-action="Index"></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link fa-solid fa-book-open fa-xl" asp-area="" asp-controller="Rents" asp-action="Index"></a>
+                            <a class="nav-link fa-solid fa-book-open fa-xl" asp-area="" asp-controller="Loans" asp-action="Index"></a>
                         </li>
                     </ul>
                 </div>
@@ -54,7 +54,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2023 - Test - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2023 - Berwick Academy
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
