--- a/BookExchange/wwwroot/css/HomeIndex.css
+++ b/BookExchange/wwwroot/css/HomeIndex.css
@@ -1,25 +1,34 @@
-﻿body {
+﻿* {
+    --fontGrowth: .8vw;
+}
+
+body {
     background-color: #EEEEEF;
     font-family: 'Roboto', sans-serif;
 }
 
+.container {
+    margin-left: 6rem;
+}
+
 .mainBody {
-    margin-top: 15px;
+    margin-top: 5rem;
     color: black;
-    height: 500px;
 }
 
 #Welcome {
     margin-left: 40px;
     border-bottom-style: solid;
     font-family: 'Poppins', sans-serif;
+    font-size: calc(2em + var(--fontGrowth)) !important;
+    font-weight: bold !important;
     width: 30%;
 }
 
 #bodyBackground {
     background-color: #EEEEEF;
-    width: 860px;
-    height: 430px;
+    width: 950px;
+    height: calc(475px + .5vw);
     position: fixed;
     margin-top: 10px;
     margin-left: 30px;
@@ -32,18 +41,23 @@
     position: relative;
     margin-top: 30px;
     margin-left: 60px;
+    font-size: calc(1.5em + var(--fontGrowth))) !important;
+    font-weight: bold !important;
 }
 
 #header2 {
     position: relative;
-    margin-top: 120px;
     margin-left: 60px;
+    font-size: calc(1.5em + var(--fontGrowth))) !important;
+    font-weight: bold !important;
 }
 
 #header3 {
     position: relative;
     margin-top: 20px;
     margin-left: 60px;
+    font-size: calc(1.5em + var(--fontGrowth))) !important;
+    font-weight: bold !important;
 }
 
 hr {
@@ -57,7 +71,6 @@ hr {
 }
 
 #description {
-    position: fixed;
     margin-left: 60px;
     margin-top: 10px;
     padding: 15px;
@@ -67,6 +80,7 @@ hr {
     border-left-style: solid;
     border-bottom-style: solid;
     border-width: 2px;
+    font-size: calc(1rem + .1vw) !important;
 }
 
 .button {
