--- a/BookExchange/Views/Books/CreateISBN.cshtml
+++ b/BookExchange/Views/Books/CreateISBN.cshtml
@@ -4,29 +4,41 @@
     ViewData["Title"] = "CreateISBN";
 }
 
-<h1>Create</h1>
+<html>
+<head>
+    <title>BookExchange</title>
 
-<h4>Book</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="CreateISBN">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="ISBN" class="control-label"></label>
-                <input asp-for="ISBN" class="form-control" />
-                <span asp-validation-for="ISBN" class="text-danger"></span>
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="~/css/CreateISBN.css" asp-append-version="true" />
+    <script src="~/js/LoanCreate.js" asp-append-version="true"></script>
+</head>
+
+<body>
+    <div id="page">
+        <div id="c1" class="w3-card w3-light-gray w3-round">
+            <div id="c2" class="w3-container w3-light-gray w3-">
+                <h2 id="text">Enter the isbn number for the book you would like to add</h2>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+
+            <div class="row">
+                <div class="col-md-4">
+                    <form asp-action="CreateISBN">
+                        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                        <div class="form-group w3-input w3-margin">
+                            <label asp-for="ISBN" class="control-label"></label>
+                            <input asp-for="ISBN" class="form-control" />
+                            <span asp-validation-for="ISBN" class="text-danger"></span>
+                        </div>
+                        <div class="form-group LoanSubmit">
+                            <input type="submit" value="Search" class="w3-btn w3-round btn" />
+                        </div>
+                    </form>
+                </div>
             </div>
-        </form>
+        </div>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+</body>
+</html>
 
 @section Scripts {
     @{
