Changed Website Description

--- a/BookExchange/Views/Home/Index.cshtml
+++ b/BookExchange/Views/Home/Index.cshtml
@@ -22,7 +22,7 @@
         <hr>
 
         <p id="description">
-            The Berwick Book Exchange, or BBE for short, 
+            The Berwick Book Exchange,  
             is a resource for students to exhange and loan out old books 
             to students looking for them. Our hope is that through this program
             students and parents can save money on books for the upcoming school year.
@@ -32,12 +32,12 @@
 
     <div>
         <h2 id="header2">
-            Loan Your First Book 
+            Donate Your First Book 
         </h2>
 
         <hr>
 
-        <a class="button" id="Click2Start" asp-area="" asp-controller="Loans" asp-action="Index">
+        <a class="button" id="Click2Start" asp-area="" asp-controller="Loans" asp-action="Create">
             Click Here to Get Started!
         </a>
     </div>
@@ -49,7 +49,7 @@
 
         <hr>
 
-        <a class="button" id="Click4List" asp-area="" asp-controller="Books" asp-action="Index">
+        <a class="button" id="Click4List" asp-area="" asp-controller="Books" asp-action="Page">
             Click Here for the List
         </a>
     </div>
