Stylized page for loaning books

--- a/BookExchange/Views/Loans/Create.cshtml
+++ b/BookExchange/Views/Loans/Create.cshtml
@@ -16,7 +16,7 @@
     <div id="page">
         <div id="c1" class="w3-card w3-light-gray w3-round">
             <div id="c2" class="w3-container w3-light-gray w3-">
-                <h2 id="text">Enter the information on the book you'd like to check in</h2>
+                <h2 id="text">Enter your contact information</h2>
             </div>
 
             <div class="row">
