--- a/BookExchange/wwwroot/css/BookDetails.css
+++ b/BookExchange/wwwroot/css/BookDetails.css
@@ -1,11 +1,9 @@
 ﻿.main {
     display: flex;
     flex-direction: row;
-}
-
-.main {
     background-color: gainsboro;
-    width: 80%;
+    width: 85%;
+    height: 65vh;
     border-radius: 10px;
     position: relative;
     top: 10%;
@@ -15,9 +13,17 @@
     margin-top: 20px;
     margin-bottom: 10px;
     transition-duration: 0.4s;
-    flex-direction: row;
     align-items: center;
 }
+
+.bookInfo {
+    height: 100%;
+    padding: 10px;
+}
+.row {
+    height: 100%;
+}
+
 
 .details {
     border-bottom-style: solid;
@@ -27,7 +33,11 @@
 }
 
 .ActionContainer {
-    padding-left: 20px;
+    height: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 body {
@@ -35,7 +45,8 @@ body {
 }
 
 .col-sm-10 {
-    max-height: 25rem;
+    max-height: 20rem;
+    max-width: 45rem;
     overflow-y: auto;
     overflow-x: hidden;
 }
@@ -46,7 +57,7 @@ body {
     color: white;
     text-align: center;
     text-decoration: none;
-    font-size: 16px;
+    font-size: 17px;
     font-weight: bold;
     padding: 15px 32px;
     border: none;
