--- a/BookExchange/wwwroot/css/BookIndex.css
+++ b/BookExchange/wwwroot/css/BookIndex.css
@@ -2,6 +2,7 @@
     border-radius: 15px;
     background-color: #F1F1F1;
     width: 100%;
+    height: 100%;
     overflow: auto;
     position: relative;
     padding-bottom: 8px;
@@ -13,13 +14,15 @@
 
 .card {
     background-color: rgb(211, 209, 209);
-    width: 80%;
+    width: 50rem;
+    height: 11rem;
     border-radius: 10px;
     position: relative;
     top: 10%;
-    margin: auto;
     margin-top: 20px;
     margin-bottom: 10px;
+    margin-left: 15px;
+    margin-right: 15px;
     transition-duration: 0.4s;
     flex-direction: row;
     align-items: center;
@@ -30,7 +33,6 @@
     }
 
     .card img {
-        width: 6.36rem;
         aspect-ratio: auto 128 / 200;
         height: 10.5rem;
         border-radius: 5px;
@@ -64,7 +66,7 @@
 }
 
     .button:hover {
-        background-color: #00aeff; /* Green */
+        background-color: #00aeff;
         color: white;
     }
 
@@ -85,7 +87,7 @@
 }
 
     .SearchButton:hover {
-        background-color: #00aeff; /* Green */
+        background-color: #00aeff;
         color: white;
     }
 
@@ -132,25 +134,30 @@
 }
 
     .pagination a {
-        color: black;
+        color: white;
         float: left;
         padding: 8px 16px;
         text-decoration: none;
         transition: background-color .3s;
-        border: 1px solid #ddd;
+        border: 1px solid #1d73ae99;
         margin: 0 4px;
-        background-color: azure;
-        transition: background-color .3s;
+        background-color: #1d73ae99;
     }
 
         .pagination a.active {
-            background-color: #4CAF50;
+            background-color: #005493;
             color: white;
-            border: 1px solid #4CAF50;
+            border: 1px solid #005493;
         }
 
-        .pagination a:hover:not(.active) {
-            background-color: darkcyan;
+        .pagination a.disabled {
+            background-color: #5374a399;
+            color: black;
+            border: 1px solid #5374a399;
+        }
+
+        .pagination a:hover:not(.active):not(.disabled) {
+            background-color: #00aeff;
         }
 
         .pagination a:first-child {
