--- a/BookExchange/Views/Shared/_Layout.cshtml
+++ b/BookExchange/Views/Shared/_Layout.cshtml
@@ -55,10 +55,11 @@
     </div>
 
     <footer class="border-top footer text-muted">
-        <div class="container">
+        <div class="foot-container">
             &copy; 2023 - Berwick Academy
         </div>
     </footer>
+
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
